--- a/pom.xml
+++ b/pom.xml
@@ -50,4 +50,10 @@
           </plugin>
     </plugins>
   </build>
+
+   <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+    <sha1/>
+  </properties>
 </project>
