--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>{revision}</version>
+  <version>1.7-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -48,14 +48,15 @@
                               <!--<versionTagPrefix>tagPrefijo</versionTagPrefix>-->
                               <origin>origin</origin>>
                           </gitFlowConfig>
+                          <scmCommentPrefix>JgitFLow step: </scmCommentPrefix>
                         <commitMessages>
-                                  <featureStartMessage>Update versions for feature branch</featureStartMessage>
-                                  <featureFinishMessage>Update versions for development branch</featureFinishMessage>
+                                  <featureStartMessage>Start Update versions for feature branch</featureStartMessage>
+                                  <featureFinishMessage>Finish Update versions for development branch</featureFinishMessage>
                                   <hotfixStartMessage>Update versions for hotfix</hotfixStartMessage>
                                   <hotfixFinishMessage>Update for next development version</hotfixFinishMessage>
                                   <hotfixVersionUpdateMessage>Update to hotfix version</hotfixVersionUpdateMessage>
-                                  <releaseStartMessage>Update versions for release</releaseStartMessage>
-                                  <releaseFinishMessage>Update for next development version</releaseFinishMessage>
+                                  <releaseStartMessage>Start Update versions for release</releaseStartMessage>
+                                  <releaseFinishMessage>Finish Update for next development version</releaseFinishMessage>
                                   <releaseVersionUpdateMessage>Update for next development version</releaseVersionUpdateMessage>
                         </commitMessages>
                         <pushReleases>true</pushReleases>      <!-- Si se activa permite a Jenkins automatizar los despligues -->
@@ -71,6 +72,5 @@
    <properties>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
-    <sha1/>
   </properties>
 </project>
