<pushReleases>false</pushReleases>

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
                                   <releaseFinishMessage>Finish Update for next development version</releaseFinishMessage>
                                   <releaseVersionUpdateMessage>Update for next development version</releaseVersionUpdateMessage>
                         </commitMessages>
-                        <pushReleases>true</pushReleases>      <!-- Si se activa permite a Jenkins automatizar los despligues -->
+                        <pushReleases>false</pushReleases>      <!-- Si se activa permite a Jenkins automatizar los despligues -->
                         <noDeploy>false</noDeploy>              <!--Evita despliegues  desde local para que sea hecho por CI-->
                         <enableSshAgent>true</enableSshAgent>                   <!--Activa/Desactiva el push para origin usando la ssh key-->
                         <autoVersionSubmodules>false</autoVersionSubmodules>             <!--Mantiene la versión de los submodulos como en el parent del pom-->
