--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.15-SNAPSHOT</version>
+  <!--<version>1.15-SNAPSHOT</version>-->
+  <version>${revision}</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -74,5 +75,6 @@
    <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <revision>1.15-SNAPSHOT</revision>
   </properties>
 </project>
