--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <version>${revision}</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <revision>1.15-SNAPSHOT</revision>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -33,6 +40,30 @@
           </archive>
         </configuration>
       </plugin>
+       <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>flatten-maven-plugin</artifactId>
+                    <version>${flatten.plugin.version}</version>
+                    <executions>
+                        <!-- enable flattening -->
+                        <execution>
+                            <id>flatten</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>flatten</goal>
+                            </goals>
+                        </execution>
+                        <!-- ensure proper cleanup -->
+                        <execution>
+                            <id>flatten.clean</id>
+                            <phase>clean</phase>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
       <plugin>
               <groupId>com.amashchenko.maven.plugin</groupId>
                 <artifactId>gitflow-maven-plugin</artifactId>
@@ -72,9 +103,5 @@
     </plugins>
   </build>
 
-   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <revision>1.15-SNAPSHOT</revision>
-  </properties>
+   
 </project>
