--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <revision>1.15-SNAPSHOT</revision>
+     <flatten.plugin.version>1.1.0</flatten.plugin.version>
   </properties>
 
   <dependencies>
