--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
   <!--<version>1.15-SNAPSHOT</version>-->
-  <version>${revision}</version>
+  <version>${aa.bb.revision}</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <revision>1.15-SNAPSHOT</revision>
+    <aa.bb.revision>1.15-SNAPSHOT</aa.bb.revision>
      <flatten.plugin.version>1.1.0</flatten.plugin.version>
   </properties>
 
