--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,13 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <!--<version>1.15-SNAPSHOT</version>-->
-  <version>${aa.bb.revision}</version>
+  <version>1.15-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <aa.bb.revision>1.15-SNAPSHOT</aa.bb.revision>
      <flatten.plugin.version>1.1.0</flatten.plugin.version>
   </properties>
 
