--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.15</version>
+  <version>1.16-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
 
